// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders catalog 1`] = `
<div
  className="HeaderCatalog-root-30"
>
  <div
    className="HeaderCatalog-streamUserBlock-31"
  >
    <p
      className="HeaderCatalog-streamUserHello-32"
    >
      Hello, Ben A 
      <br />
      <a
        className="HeaderCatalog-streamUserVerification-33"
        href="/"
        onClick={[Function]}
      >
        KYC VERIFICATION
      </a>
    </p>
    <div
      className="HeaderCatalog-streamUserPhoto-34"
    >
      <img
        alt=""
        src="user.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`renders game 1`] = `
<div
  className="HeaderGame-root-20"
>
  <div
    className="HeaderGame-gameUserBlock-21"
  >
    <p
      className="HeaderGame-gameUserHello-22"
    >
      Hello, Ben A 
      <br />
      <a
        className="HeaderGame-gameUserVerification-23"
        href="/"
        onClick={[Function]}
      >
        KYC VERIFICATION
      </a>
    </p>
    <div
      className="HeaderGame-gameUserPhoto-24"
    >
      <img
        alt=""
        src="user.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`renders games 1`] = `
<div
  className="HeaderGames-root-25"
>
  <div
    className="HeaderGames-gamesUserBlock-26"
  >
    <p
      className="HeaderGames-gamesUserHello-27"
    >
       Hello, Ben A 
      <br />
      <a
        className="HeaderGames-gamesUserVerification-28"
        href="/"
        onClick={[Function]}
      >
        KYC VERIFICATION
      </a>
    </p>
    <div
      className="HeaderGames-gamesUserPhoto-29"
    >
      <img
        alt=""
        src="user.jpg"
      />
    </div>
  </div>
  <div>
    Test
  </div>
</div>
`;

exports[`renders main 1`] = `
<header
  className="HeaderMain-root-1"
>
  <ul
    className="MenuNavigation-root-2"
  >
    <div
      className="MenuNavigation-headerMenuItem-3 MenuNavigation-wrLogout-4"
      onClick={[Function]}
    >
      <i
        className="MenuNavigation-menuIcon-5 MenuNavigation-logout-6"
      />
      <br />
       Logout
    </div>
    <li>
      <a
        aria-current="page"
        className="MenuNavigation-headerMenuItem-3 active"
        href="/"
        onClick={[Function]}
        style={Object {}}
      >
        <i
          className="MenuNavigation-menuIcon-5 MenuNavigation-walletIcon-7"
        />
        <br />
         Wallet
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        className="MenuNavigation-headerMenuItem-3"
        href="/vchange"
        onClick={[Function]}
      >
        <i
          className="MenuNavigation-menuIcon-5 MenuNavigation-vexchange-8"
        />
        <br />
         VChange
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        className="MenuNavigation-headerMenuItem-3"
        href="/games"
        onClick={[Function]}
      >
        <i
          className="MenuNavigation-menuIcon-5 MenuNavigation-games-11"
        />
        <br />
         Games
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        className="MenuNavigation-headerMenuItem-3"
        href="/#apps"
        onClick={[Function]}
      >
        <i
          className="MenuNavigation-menuIcon-5 MenuNavigation-apps-9"
        />
        <br />
         Apps
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        className="MenuNavigation-headerMenuItem-3"
        href="/#shops"
        onClick={[Function]}
      >
        <i
          className="MenuNavigation-menuIcon-5 MenuNavigation-shop-10"
        />
        <br />
         Shop
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        className="MenuNavigation-headerMenuItem-3"
        href="/#contacts"
        onClick={[Function]}
      >
        <i
          className="MenuNavigation-menuIcon-5 MenuNavigation-friends-12"
        />
        <br />
         Contacts
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        className="MenuNavigation-headerMenuItem-3"
        href="/#settings"
        onClick={[Function]}
      >
        <i
          className="MenuNavigation-menuIcon-5 MenuNavigation-settings-13"
        />
        <br />
         Settings
      </a>
    </li>
  </ul>
  <div
    className="UserBlock-root-14"
  >
    <div
      className="UserBlock-user-15"
    >
      <div
        className="UserBlock-userBlock-16"
      >
        <p
          className="UserBlock-userHello-17"
        >
          Hello, anonymous 
          <br />
          <a
            className="UserBlock-userVerification-18"
            href="/"
            onClick={[Function]}
          >
            KYC VERIFICATION
          </a>
        </p>
        <div
          className="UserBlock-userPhoto-19"
        >
          <img
            alt=""
            src="user.jpg"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;
